Fixed images and spacing

--- a/portfolio.css
+++ b/portfolio.css
@@ -17,17 +17,39 @@
  }
 
  .card {
+    margin: 150px;
     background: navy;
     color: snow;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 16px;
+    text-align: center;
+    float: left;
  }
 
+.card2 {
+    margin: 150px;
+    background: navy;
+    color: snow;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 16px;
+    text-align: center;
+    float: left;
+}
+
+.card3 {
+    margin: 150px;
+    background: navy;
+    color: snow;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 16px;
+    text-align: centerß;
+    float: left;
+}
  
 img {
     margin: 50px;
-    width: 400px;
-    height: 400px;
+    width: 200px;
+    height: 200px;
     clear: both;
 }
 
